View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025879 | Community | OCCT:Modeling Algorithms | public | 2015-03-01 15:28 | 2021-11-26 10:08 |
Reporter | shoogen | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Linux | OS | Debian 6.0 | ||
Product Version | 6.8.0 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0025879: result of blend fails the bopcheck | ||||
Description | the result of blend (fillet) raises an exceptions and therefore aborts the bopcheck | ||||
Steps To Reproduce | pload MODELING box Box 10 10 10 explode Box E blend Fillet Box 1 Box_1 1 Box_2 1 Box_3 1 Box_4 1 Box_5 1 Box_6 1 Box_7 1 Box_8 1 Box_9 1 Box_10 1 Box_11 1 Box_12 #bopcheck Fillet # There were errors during the operation, so the list may be incomplete. # This shape seems to be OK. | ||||
Additional information and documentation updates | #4 0x00007fa8871c5530 in Standard_ConstructionError::Raise ( AString=0x7fa887d5aaea "") at occt/drv/Standard/Standard_ConstructionError_0.cxx:10 #5 0x00007fa887d282c6 in gp_Dir::gp_Dir (this=0x7ffd31410360, V=...) at occt/inc/gp_Dir.lxx:31 #6 0x00007fa88666658f in ElCLib::CircleParameter (Pos=..., P=...) at occt/src/ElCLib/ElCLib.cxx:1274 0000007 0x00007fa88766a8b1 in ElCLib::Parameter (C=..., P=...) at occt/inc/ElCLib.lxx:406 0000008 0x00007fa883a74ef5 in FindLine (Psurf=..., slin=..., Tol=0.00044721359549995795, Paraint=@0x7ffd31410f50: 0, Vtgtint=..., Range=@0x7ffd31410f58: 1, OnlyThisLine=1, thearc=..., theparameteronarc=@0x7ffd31410f48: -1, thepointonarc=..., QuadSurf=...) at occt/inc/IntPatch_ImpImpIntersection_0.gxx:964 0000009 0x00007fa883a72965 in PutPointsOnLine (S1=..., S2=..., listpnt=..., slin=..., OnFirst=0, Domain=..., QuadSurf=..., OtherQuad=..., multpoint=0, Tolarc=1.9999999999999999e-07) at occt/inc/IntPatch_ImpImpIntersection_0.gxx:463 #10 0x00007fa883a7bb64 in IntPatch_ImpImpIntersection::Perform (this= 0x7ffd314119f0, S1=..., D1=..., S2=..., D2=..., TolArc=1.9999999999999999e-07, TolTang=1.9999999999999999e-07, isTheTrimmed=0) at occt/inc/IntPatch_ImpImpIntersection_2.gxx:409 0000011 0x00007fa883a7a28f in IntPatch_ImpImpIntersection::IntPatch_ImpImpIntersection (this=0x7ffd314119f0, S1=..., D1=..., S2=..., D2=..., TolArc=1.9999999999999999e-07, TolTang=1.9999999999999999e-07) at occt/inc/IntPatch_ImpImpIntersection_2.gxx:42 #12 0x00007fa883ab5b9b in IntPatch_Intersection::GeomGeomPerfom (this= 0x4aeb9e0, theS1=..., theD1=..., theS2=..., theD2=..., TolArc=1.9999999999999999e-07, TolTang=1.9999999999999999e-07, ListOfPnts=..., RestrictLine=1, typs1=GeomAbs_Sphere, typs2=GeomAbs_Plane) at occt/src/IntPatch/IntPatch_Intersection.cxx:1505 0000013 0x00007fa883ab6f6f in IntPatch_Intersection::GeomGeomPerfomTrimSurf (this= 0x4aeb9e0, theS1=..., theD1=..., theS2=..., theD2=..., theTolArc=1.9999999999999999e-07, theTolTang=1.9999999999999999e-07, theListOfPnts=..., RestrictLine=1, theTyps1=GeomAbs_Sphere, theTyps2=GeomAbs_Plane) at occt/src/IntPatch/IntPatch_Intersection.cxx:1746 0000014 0x00007fa883ab4d27 in IntPatch_Intersection::Perform (this=0x4aeb9e0, theS1=..., theD1=..., theS2=..., theD2=..., TolArc=1.9999999999999999e-07, TolTang=1.9999999999999999e-07, ListOfPnts=..., RestrictLine=1, isGeomInt=1) at occt/src/IntPatch/IntPatch_Intersection.cxx:1375 0000015 0x00007fa884985374 in IntTools_FaceFace::Perform (this=0x4aeb9d8, aF1=..., aF2=...) at occt/src/IntTools/IntTools_FaceFace.cxx:752 0000016 0x00007fa884a1a4b1 in BOPAlgo_FaceFace::Perform (this=0x4aeb9b0) at occt/src/BOPAlgo/BOPAlgo_PaveFiller_6.cxx:156 | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_7 bug25879 | ||||
|
Problem described in issue is reproduced on current state of OCCT. |
|
The bopcheck fails because intersection of some of the faces raises exception. Try to intersect the pairs of faces in the attached compound:restore faces.brep faces foreach c [explode faces] { copy $c pair explode pair bop pair_1 pair_2 } |
2017-09-26 09:07 developer |
faces.brep (8,773 bytes) |
|
Dear msv, It seems that problem has been fixed. Bopcheck returns: Draw[5]> bopcheck Fillet This shape seems to be OK. On msvs2010 and msvs2013 |
|
Branch CR25879 has been created by aml. SHA-1: bcb80f8f7eab22be98485f360818a77d907cf1fd Detailed log of new commits: Author: aml Date: Fri Nov 10 18:21:21 2017 +0300 0025879: result of blend fails the bopcheck Protection from the zero-length gp_Dir construction is added. |
|
Branch CR25879 has been updated forcibly by aml. SHA-1: a696bf642f2400792899070a9299874696475a27 |
|
Dear msv, Could you please check the current state of the CR25879 branch? Jenkins job is: http://jenkins-test-10.nnov.opencascade.com/view/CR25879-master-AML/view/COMPARE/ |
|
Reviewed. |
|
Combination - OCCT branch : CR25879 SHA-1: a696bf642f2400792899070a9299874696475a27 Products branch : master was compiled on Linux, MacOS and Windows platforms and tested on optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Linux: OCCT Total CPU difference: 20673.960000000538 / 20769.880000000467 [-0.46%] Products Total CPU difference: 7872.240000000091 / 7901.260000000098 [-0.37%] Windows: OCCT Total CPU difference: 18538.800037698362 / 18481.95327329852 [+0.31%] Products Total CPU difference: 7892.0125894999965 / 7874.587277799976 [+0.22%] Image differences : No differences that require special attention Memory differences : No differences that require special attention Test case is OK |
|
Branch CR25879 has been deleted by kgv. SHA-1: a696bf642f2400792899070a9299874696475a27 |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-03-01 15:28 | shoogen | New Issue | |
2015-03-01 15:28 | shoogen | Assigned To | => msv |
2015-03-01 16:03 | shoogen | Tag Attached: BOPAlgo_OperationAborted | |
2017-08-08 17:10 |
|
Test case number | => bugs modalg_7 bug25879 |
2017-08-08 17:10 |
|
Note Added: 0069218 | |
2017-09-26 09:00 |
|
Relationship added | related to 0025693 |
2017-09-26 09:01 |
|
Relationship added | related to 0025104 |
2017-09-26 09:07 |
|
Note Added: 0070836 | |
2017-09-26 09:07 |
|
File Added: faces.brep | |
2017-11-01 14:25 |
|
Note Added: 0071911 | |
2017-11-01 14:25 |
|
Assigned To | msv => aml |
2017-11-01 14:25 |
|
Status | new => assigned |
2017-11-11 10:55 | git | Note Added: 0072195 | |
2017-11-16 15:31 | git | Note Added: 0072287 | |
2017-11-17 06:58 |
|
Note Added: 0072305 | |
2017-11-17 06:58 |
|
Assigned To | aml => msv |
2017-11-17 06:58 |
|
Status | assigned => resolved |
2017-11-17 12:18 |
|
Note Added: 0072315 | |
2017-11-17 12:18 |
|
Assigned To | msv => bugmaster |
2017-11-17 12:18 |
|
Status | resolved => reviewed |
2017-11-20 12:00 | bugmaster | Note Added: 0072333 | |
2017-11-20 12:00 | bugmaster | Status | reviewed => tested |
2017-11-25 12:28 | bugmaster | Changeset attached | => occt master c5b89fa3 |
2017-11-25 12:28 | bugmaster | Status | tested => verified |
2017-11-25 12:28 | bugmaster | Resolution | open => fixed |
2017-12-07 21:07 | git | Note Added: 0072782 | |
2018-02-19 10:20 |
|
Target Version | => 7.4.0 |
2018-02-20 12:58 |
|
Target Version | 7.4.0 => 7.3.0 |
2018-06-29 21:15 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:19 |
|
Status | verified => closed |
2021-11-26 10:08 | kgv | Tag Detached: BOPAlgo_OperationAborted |