0025879: result of blend fails the bopcheck

Protection from the zero-length gp_Dir construction is added.